目录重构，部分实现侧边栏功能

--- a/可视化组件/tsconfig.json
+++ b/可视化组件/tsconfig.json
@@ -40,8 +40,8 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "src/**/**/*.vue",
-    "tests/*.ts",
-    "tests/*.tsx",
+    "Frame/*.ts",
+    "Frame/*.tsx",
     "src/vis-libs/helper/watcher.js", "src/base/utils/smooth-curve.js"
   ],
   "exclude": [
