--- a/.gitignore
+++ b/.gitignore
@@ -65,5 +65,9 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-#依赖包
+# 依赖包
 node_modules
+# JetBrains
+.idea
+venv
+__pycache__
